Fixed user icon alignment

--- a/sources/css/story.css
+++ b/sources/css/story.css
@@ -2,9 +2,6 @@
     font-family: 'Barlow', sans-serif;
 }
 
-a {
-  font-size: 21px;
-}
 
 body {
     overflow-x: hidden;
